[package]
name = "qq-repo-guardian"
version = "0.1.0"
edition = "2024"

[features]
default = []
proc-qq = ["dep:proc_qq"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
clap = { version = "4", features = ["derive", "env"] }
hmac = "0.12"
image = { version = "0.24", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
proc_qq = { git = "https://github.com/niuhuan/rust_proc_qq.git", rev = "afb89615be09ed8e0f05add55ca8fac8104ddc09", default-features = false, features = ["connect_handler", "console_qr"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[patch."https://github.com/lz1998/ricq.git"]
ricq = { path = "vendor/ricq/ricq" }
ricq-core = { path = "vendor/ricq/ricq-core" }

